--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "react-swipeable": "^4.2.1",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2"
   },
