--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "1.1.1",
     "react-swipeable": "^4.2.1",
     "react-test-renderer": "^16.2.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "xml-to-json-promise": "^0.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
